qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_call_args.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@arg_types = private unnamed_addr constant [7 x i8] c"iifb:v\00", align 1
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define internal i64 @_hl.main.1(i64 %0, i64 %1, i64 %2, i64 %3, double %4, i1 %5) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %gpu_input_blob = alloca [25 x i8], align 1, !dbg !10
  %dest_ptr = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 0, !dbg !10
  %arg_i64_tmp = alloca i64, align 8, !dbg !10
  store i64 %2, ptr %arg_i64_tmp, align 4, !dbg !10
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr, ptr align 1 %arg_i64_tmp, i64 8, i1 false), !dbg !10
  %dest_ptr7 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 8, !dbg !10
  %arg_i64_tmp8 = alloca i64, align 8, !dbg !10
  store i64 %3, ptr %arg_i64_tmp8, align 4, !dbg !10
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr7, ptr align 1 %arg_i64_tmp8, i64 8, i1 false), !dbg !10
  %dest_ptr9 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 16, !dbg !10
  %arg_f64_tmp = alloca double, align 8, !dbg !10
  store double %4, ptr %arg_f64_tmp, align 8, !dbg !10
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr9, ptr align 1 %arg_f64_tmp, i64 8, i1 false), !dbg !10
  %dest_ptr10 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 24, !dbg !10
  %arg_i8 = zext i1 %5 to i8, !dbg !10
  store i8 %arg_i8, ptr %dest_ptr10, align 1, !dbg !10
  %6 = call i8 @gpu_call(i64 %0, i64 %1, i64 25, ptr %gpu_input_blob, ptr @arg_types), !dbg !10
  call void @validate_gpu_response(i8 %6), !dbg !10
  ret i64 %0
}

declare i8 @gpu_call(i64, i64, i64, ptr, ptr)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #1 {
entry:
  %success = icmp ne i8 %0, 0, !dbg !10
  br i1 %success, label %ok, label %err, !dbg !10

ok:                                               ; preds = %entry
  ret void, !dbg !10

err:                                              ; preds = %entry
  call void @gpu_error_handler(), !dbg !10
  unreachable, !dbg !10
}

; Function Attrs: noinline
define void @gpu_error_handler() #1 {
entry:
  %error_message = call ptr @gpu_get_error(), !dbg !10
  %is_null = icmp eq ptr %error_message, null, !dbg !10
  %error_message_nonnull = select i1 %is_null, ptr @no_gpu_error, ptr %error_message, !dbg !10
  call void @panic_str(i32 70002, ptr %error_message_nonnull), !dbg !10
  unreachable, !dbg !10
}

declare ptr @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, ptr) #2

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { noinline }
attributes #2 = { noreturn }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7, !7, !7, !7, !8, !9}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DILocation(line: 5299, column: 65, scope: !3)
