qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_lookup_by_name.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@gpu_cache_is_set_function_id_example_function = thread_local global i8 0
@gpu_cache_function_id_example_function = thread_local global i64 0
@gpu_validated = thread_local global i8 0
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1
@function_name = private unnamed_addr constant [17 x i8] c"example_function\00", align 1

define internal i64 @_hl.main.1({} %0) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %function_id_call = call i64 @gpu_function_id_example_function(), !dbg !10
  ret i64 %function_id_call
}

; Function Attrs: noinline
define i64 @gpu_function_id_example_function() #0 {
entry:
  %function_id = load i8, ptr @gpu_cache_is_set_function_id_example_function, align 1, !dbg !10
  %needs_lookup = icmp eq i8 %function_id, 0, !dbg !10
  br i1 %needs_lookup, label %lookup, label %read_cache, !dbg !10

lookup:                                           ; preds = %entry
  call void @run_gpu_validation(), !dbg !10
  %function_id_ptr = alloca i64, align 8, !dbg !10
  %function_id_call = call i8 @gpu_get_function_id(ptr @function_name, ptr %function_id_ptr), !dbg !10
  call void @validate_gpu_response(i8 %function_id_call), !dbg !10
  %function_id2 = load i64, ptr %function_id_ptr, align 4, !dbg !10
  store i64 %function_id2, ptr @gpu_cache_function_id_example_function, align 4, !dbg !10
  store i8 1, ptr @gpu_cache_is_set_function_id_example_function, align 1, !dbg !10
  ret i64 %function_id2, !dbg !10

read_cache:                                       ; preds = %entry
  %function_id1 = load i64, ptr @gpu_cache_function_id_example_function, align 4, !dbg !10
  ret i64 %function_id1, !dbg !10
}

; Function Attrs: noinline
define void @run_gpu_validation() #0 {
entry:
  %validated = load i8, ptr @gpu_validated, align 1, !dbg !10
  %already_validated = icmp ne i8 %validated, 0, !dbg !10
  br i1 %already_validated, label %done, label %validate, !dbg !10

done:                                             ; preds = %entry
  ret void, !dbg !10

validate:                                         ; preds = %entry
  %validate_call = call i8 @gpu_validate_api(i64 0, i64 1, i64 0), !dbg !10
  call void @validate_gpu_response(i8 %validate_call), !dbg !10
  store i8 1, ptr @gpu_validated, align 1, !dbg !10
  ret void, !dbg !10
}

declare i8 @gpu_validate_api(i64, i64, i64)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0, !dbg !10
  br i1 %success, label %ok, label %err, !dbg !10

ok:                                               ; preds = %entry
  ret void, !dbg !10

err:                                              ; preds = %entry
  call void @gpu_error_handler(), !dbg !10
  unreachable, !dbg !10
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call ptr @gpu_get_error(), !dbg !10
  %is_null = icmp eq ptr %error_message, null, !dbg !10
  %error_message_nonnull = select i1 %is_null, ptr @no_gpu_error, ptr %error_message, !dbg !10
  call void @panic_str(i32 70002, ptr %error_message_nonnull), !dbg !10
  unreachable, !dbg !10
}

declare ptr @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, ptr) #1

declare i8 @gpu_get_function_id(ptr, ptr)

attributes #0 = { noinline }
attributes #1 = { noreturn }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !8}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DICompositeType(tag: DW_TAG_structure_type, name: "{}", file: !2, align: 8, elements: !9)
!9 = !{}
!10 = !DILocation(line: 5299, column: 65, scope: !3)
