qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_call_args.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@arg_types = private unnamed_addr constant [7 x i8] c"iifb:v\00", align 1
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define private i64 @_hl.main.1(i64 %0, i64 %1, i64 %2, i64 %3, double %4, i1 %5) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"2_2" = alloca i64, align 8
  %"2_3" = alloca i64, align 8
  %"2_4" = alloca double, align 8
  %"2_5" = alloca i1, align 1
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  store i64 %1, ptr %"2_1", align 4
  store i64 %2, ptr %"2_2", align 4
  store i64 %3, ptr %"2_3", align 4
  store double %4, ptr %"2_4", align 8
  store i1 %5, ptr %"2_5", align 1
  %"2_01" = load i64, ptr %"2_0", align 4
  %"2_12" = load i64, ptr %"2_1", align 4
  %"2_23" = load i64, ptr %"2_2", align 4
  %"2_34" = load i64, ptr %"2_3", align 4
  %"2_45" = load double, ptr %"2_4", align 8
  %"2_56" = load i1, ptr %"2_5", align 1
  %gpu_input_blob = alloca [25 x i8], align 1
  %dest_ptr = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 0
  %arg_i64_tmp = alloca i64, align 8
  store i64 %"2_23", ptr %arg_i64_tmp, align 4
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr, ptr align 1 %arg_i64_tmp, i64 8, i1 false)
  %dest_ptr7 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 8
  %arg_i64_tmp8 = alloca i64, align 8
  store i64 %"2_34", ptr %arg_i64_tmp8, align 4
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr7, ptr align 1 %arg_i64_tmp8, i64 8, i1 false)
  %dest_ptr9 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 16
  %arg_f64_tmp = alloca double, align 8
  store double %"2_45", ptr %arg_f64_tmp, align 8
  call void @llvm.memcpy.p0.p0.i64(ptr align 1 %dest_ptr9, ptr align 1 %arg_f64_tmp, i64 8, i1 false)
  %dest_ptr10 = getelementptr inbounds [25 x i8], ptr %gpu_input_blob, i64 0, i64 24
  %arg_i8 = zext i1 %"2_56" to i8
  store i8 %arg_i8, ptr %dest_ptr10, align 1
  %6 = call i8 @gpu_call(i64 %"2_01", i64 %"2_12", i64 25, ptr %gpu_input_blob, ptr @arg_types)
  call void @validate_gpu_response(i8 %6)
  store i64 %"2_01", ptr %"4_0", align 4
  %"4_011" = load i64, ptr %"4_0", align 4
  store i64 %"4_011", ptr %"0", align 4
  %"012" = load i64, ptr %"0", align 4
  ret i64 %"012"
}

declare i8 @gpu_call(i64, i64, i64, ptr, ptr)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #1 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #1 {
entry:
  %error_message = call ptr @gpu_get_error()
  %is_null = icmp eq ptr %error_message, null
  %error_message_nonnull = select i1 %is_null, ptr @no_gpu_error, ptr %error_message
  call void @panic_str(i32 70002, ptr %error_message_nonnull)
  unreachable
}

declare ptr @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, ptr) #2

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #1 = { noinline }
attributes #2 = { noreturn }
